services/30-cert-manager/internal_issuer/test/ingress.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: app
  name: app
spec:
  replicas: 2
  selector:
    matchLabels:
      run: app
  template:
    metadata:
      labels:
        run: app
    spec:
      containers:
      - name: app
        image: nginx
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: app
  name: app
  annotations:
    haproxy.org/check: "enabled"
    haproxy.org/forwarded-for: "enabled"
    haproxy.org/load-balance: "roundrobin"
spec:
  selector:
    run: app
  ports:
  - name: port-1
    port: 80
    protocol: TCP
    targetPort: 80

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: web-ingress
  namespace: default
  annotations:
    # use the shared nginx-ingress
    kubernetes.io/ingress.class: "nginx-internal"
    certmanager.k8s.io/cluster-issuer: "internal"
spec:
  tls:
  - hosts:
    - test.k8s.grigri
    secretName: test-tls
  rules:
  - host: test.k8s.grigri
    http:
      paths:
      - path: /
        backend:
          serviceName: app
          servicePort: 80
